# words-with-coworkers

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  docker-compose.yml  emojis.yml  release.sh  rust-toolchain
.github/: labeler.yml
.github/workflows/: slack.yml  words-game.yml  words_game_slack.yml
migrations/2018-05-26-053357_create_game_table/: down.sql  up.sql
migrations/2018-05-26-053357_create_initial_tables/: down.sql  up.sql
migrations/2018-08-15-025002_remove_unused_game_columns/: down.sql  up.sql
src/: actions.rs  constants.rs  error.rs  lib.rs  main.rs  schema.rs
src/app/: mod.rs  pool.rs
src/app/guards/: db_guard.rs
src/app/slack/: board.rs  dict.rs  hand.rs  help.rs  mod.rs  play.rs  quit.rs  start.rs
src/app/state/: dictionary.rs
src/helpers/: extract_user_ids.rs  mod.rs
src/lib/: mod.rs
src/lib/scrabble/: config.rs  mod.rs
src/lib/slack/: emoji.rs  mod.rs  tag.rs
src/models/: board.rs  game.rs  game_adapter_model.rs  game_model.rs  mod.rs  player.rs  player_model.rs  team_model.rs  tile.rs
src/operations/: game_operations.rs  mod.rs
src/operations/game_adapter_operations/: get_game.rs  mod.rs  new_game.rs  printing.rs  update_game.rs
src/scrabble/: actions.rs  constants.rs  error.rs  game_factory.rs  mod.rs  models.rs
src/services/: mod.rs
tests/: common.rs  integration_test.rs
words-game/: Cargo.toml
words-game-cli/: package.json  tsconfig.json
words-game-cli/src/: app.tsx  board.tsx  style.ts  tile.tsx
words-game-wasm/: Cargo.toml  LICENSE_MIT
words-game-wasm/src/: lib.rs
words-game-wasm/www/: index.js  package-lock.json  package.json
words-game/src/: constants.rs  lib.rs
words-game/src/models/: board.rs  game.rs  mod.rs  player.rs  tile.rs
words-game/tests/: common.rs  integration_test.rs
words_game/: Cargo.toml
words_game/src/: lib.rs
words_game_slack/: .dockerignore  .gitignore  .iex.exs  Dockerfile  README.md  artillery.yml  build.sh  docker-compose.yml  docker-start.sh  mix.exs
words_game_slack/assets/: package-lock.json  package.json  webpack.config.js
words_game_slack/config/: config.exs  dev.exs  env.example.exs  prod.exs  prod.secret.exs  releases.exs  test.exs
words_game_slack/lib/: words_game_elixir.ex  words_game_slack.ex  words_game_slack_web.ex
words_game_slack/native/words_game_elixir/: Cargo.toml  README.md
words_game_slack/native/words_game_elixir/src/: lib.rs
words_game_slack/test/: test_helper.exs
(+83 files in other folders)
