[package]
name = "slack-scrabble-bot"
version = "0.1.0"
authors = ["Tyler Zhang <tztylerzhang@gmail.com>"]

[dependencies]
rocket = "=0.3.11"
rocket_codegen = "=0.3.11"
rocket_contrib = "=0.3.11"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde_urlencoded = "*"

uuid = { version = "*", features = ["serde", "v4"] }

failure = "*"
failure_derive = "*"

auto_impl = "*"

diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
r2d2 = "*"
r2d2-diesel = "1.0.0"

dotenv = "0.9.0"

rand = "*"

regex = "=1.0.0"
