[package]
name = "slack-scrabble-bot"
version = "0.1.0"
authors = ["Tyler Zhang <tztylerzhang@gmail.com>"]

[dependencies]
rocket = "=0.3.11"
rocket_codegen = "=0.3.11"
rocket_contrib = "=0.3.11"

serde = "=1.0.64"
serde_derive = "=1.0.64"
serde_json = "=1.0.19"
serde_urlencoded = "=0.5.2"

uuid = { version = "=0.6.5", features = ["serde", "v4"] }

failure = "=0.1.1"
failure_derive = "=0.1.1"

auto_impl = "=0.2.0"

diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
r2d2 = "=0.8.2"
r2d2-diesel = "=1.0.0"

dotenv = "=0.9.0"

rand = "=0.5.0"

regex = "=1.0.0"
