[package]
name = "scrabble"
version = "0.1.0"
authors = ["tyler <tztylerzhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
