[package]
name = "words_game_elixir"
version = "0.1.0"
authors = []

[lib]
name = "words_game_elixir"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.0"
rustler_codegen = "0.21.0"
serde = "1.0"
serde_rustler = "0.1"
bufstream = "0.1.2"
lazy_static = "1.0.0"
words-game = { path = "../../../words-game"}
